src/grammar.js
    root: ($) => seq(
      // Handle first line (no preceding newline)
      optional($._first_line),
      // Handle subsequent lines
      repeat($._line)
    ),

    _first_line: ($) => choice(
      $.header_comment,
      $.comment,
      $._tokens
    ),

    _line: ($) => seq(
      $._eol,
      optional(choice(
        $.header_comment,
        $.comment,
        $._tokens
      ))
    ),

    comment: ($) => seq(
      optional($._indent),
      "#",
      optional($.comment_content)
    ),

    _indent: ($) => /[ \t]+/,
    comment_content: ($) => /[^\r\n]+/,

    // =========================================================================
    // Tokens - content of a non-comment line
    // =========================================================================

    line_continuation: ($) => token(seq(
      "\\",
      /[ \t]*/,
      /\r?\n|\r/
    )),

    // =========================================================================
    // Macro variable: $(key)
    // =========================================================================

    // Macro variable: $(key)
    macro_variable: ($) => seq(
      "$(",
      $.macro_key,
      ")"
    ),

    macro_key: ($) => /[a-zA-Z0-9_]+/,

    // =========================================================================
    // Resource locations: namespace:path, #namespace:path (tags)
    // =========================================================================

    resource_location: ($) => token(prec(3, seq(
      optional("#"),
      /[a-z0-9_][a-z0-9_.\-]*/,
      ":",
      /[a-z0-9_.\-\/]+/
    ))),

    // =========================================================================
    // Selectors
    // =========================================================================

    selector: ($) => prec.right(seq(
      $.selector_type,
      optional($.selector_arguments)
    )),

    selector_type: ($) => /@[aeprsn]/,

    selector_arguments: ($) => seq(
      $.bracket_open,
      repeat($._selector_inner),
      $.bracket_close
    ),

    _selector_inner: ($) => choice(
      $.line_continuation,
      $.nbt_compound,
      $.advancement_selector_pair,
      $.selector_pair,
      $.macro_variable,
      $.resource_location,
      $.range,
      $.number,
      $.boolean,
      $.string,
      $.identifier,
      $.comma_operator,
      /[=!]/,
      $._whitespace
    ),

    // Specialized selector pair for advancements={resource_location=boolean, ...}
    // NOTE: Fixing this exposes +22 variable.other and +45 punctuation diffs from files
    // that previously had ERROR nodes swallowing multiple lines (item predicate issues).
    nbt_compound: ($) => seq($.brace_open, repeat($._nbt_inner), $.brace_close),

    _nbt_inner: ($) => choice(
      $.line_continuation,
      $.nbt_compound,
      $.nbt_list,
      $.nbt_pair,
      $.json_pair,
      $.macro_variable,
      $.string,
      $.range,
      $.number,
      $.boolean,
      $.comma_operator,
      $.nbt_equals,
      $.dotted_identifier,
      $.identifier,
      /[:;]/,
      $._whitespace
    ),

    // NBT key:value pair - captures key for highlighting
    string: ($) => choice(
      seq('"', repeat(choice($.escape_sequence, $.macro_variable, $.line_continuation, "$", /[^"\\$\r\n]+/)), '"'),
      seq("'", repeat(choice($.escape_sequence, $.macro_variable, $.line_continuation, "$", /[^'\\$\r\n]+/)), "'")
    ),

    _range_endpoint: ($) => choice(
      alias($._number_literal, $.number_value),
      $.macro_variable
    ),

    range: ($) => prec.right(2, choice(
      seq($._range_endpoint, "..", $._range_endpoint),  // 1..10, $(min)..$(max), 1..$(max), etc.
      seq($._range_endpoint, ".."),                     // 1.., $(min)..
      seq("..", $._range_endpoint)                      // ..10, ..$(max)
    )),

    // =========================================================================
    // Coordinates
    // =========================================================================

    coordinate: ($) => token(/[~^][+-]?\d*\.?\d*/),

    // =========================================================================
    // Other tokens
    // =========================================================================

    operator: ($) => token(choice(
      "+=", "-=", "*=", "/=", "%=",
      "<=", ">=", "><", "<", ">",
      "=",
      "."  // Data path separator
    )),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_\-]*/,

    // Catch-all for unquoted words (score holders, data paths, etc.)
    // Excludes $ so fakeplayer and macro_variable can match
    // Excludes . so dots are parsed as separate operator tokens
    // Must not start with a digit so number + time_unit can handle digit-prefixed tokens.
    // WARNING: This means digit-prefixed strings (e.g. 43jkl) split into number + identifier
    // instead of a single word token. Not a problem currently but may need revisiting.
