test/corpus/basic.txt
================================================================================
Simple command
================================================================================

say hello world

--------------------------------------------------------------------------------

(root
  (identifier)
  (identifier)
  (identifier))

================================================================================
Comment
================================================================================

# This is a comment

--------------------------------------------------------------------------------

(root
  (comment
    (comment_content)))

================================================================================
Selector with arguments
================================================================================

execute as @a[gamemode=survival] run say hi

--------------------------------------------------------------------------------

(root
  (identifier)
  (identifier)
  (selector
    (selector_type)
    (selector_arguments
      (identifier)
      (identifier)))
  (identifier)
  (identifier)
  (identifier))

================================================================================
Resource location
================================================================================

function minecraft:test/example

--------------------------------------------------------------------------------

(root
  (identifier)
  (resource_location))

================================================================================
Tag resource location
================================================================================

function #minecraft:tick

--------------------------------------------------------------------------------

(root
  (identifier)
  (resource_location))

================================================================================
NBT compound
================================================================================

data merge entity @s {CustomName:"Test"}

--------------------------------------------------------------------------------

(root
  (identifier)
  (identifier)
  (identifier)
  (selector
    (selector_type))
  (nbt_compound
    (identifier)
    (string)))

================================================================================
Macro line
================================================================================

$say $(message)

--------------------------------------------------------------------------------

(root
  (macro_line
    (macro_prefix)
    (macro_variable
      (macro_key))))

================================================================================
Coordinates
================================================================================

tp @s ~ ~1 ~

--------------------------------------------------------------------------------

(root
  (identifier)
  (selector
    (selector_type))
  (coordinate)
  (coordinate)
  (coordinate))

================================================================================
Number range
================================================================================

execute if score @s obj matches 1..10 run say in range

--------------------------------------------------------------------------------

(root
  (identifier)
  (identifier)
  (identifier)
  (selector
    (selector_type))
  (identifier)
  (identifier)
  (range)
  (identifier)
  (identifier)
  (identifier)
  (identifier))

================================================================================
Line continuation
================================================================================

execute as @a \
    run say hi

--------------------------------------------------------------------------------

(root
  (identifier)
  (identifier)
  (selector
    (selector_type))
  (line_continuation)
  (identifier)
  (identifier)
  (identifier))

================================================================================
Multiple comments
================================================================================

# comment 1
# comment 2

--------------------------------------------------------------------------------

(root
  (comment
    (comment_content))
  (comment
    (comment_content)))

================================================================================
Operators
================================================================================

scoreboard players operation @s obj += @a obj

--------------------------------------------------------------------------------

(root
  (identifier)
  (identifier)
  (identifier)
  (selector
    (selector_type))
  (identifier)
  (operator)
  (selector
    (selector_type))
  (identifier))
